[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprits/Default.png" type="Texture" id=1]
[ext_resource path="res://UI/SpaceMono30.tres" type="DynamicFont" id=2]
[ext_resource path="res://Objects/Bomb.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Bomb" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -27.0
margin_top = -62.0
margin_right = 27.0
margin_bottom = -17.0
custom_fonts/font = ExtResource( 2 )
text = "E"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = -168.0
margin_top = -72.0
margin_right = 192.0
margin_bottom = -27.0
custom_fonts/font = ExtResource( 2 )
text = "I dont have PASSCODE"
align = 1

[node name="Passcode" type="Sprite" parent="."]
modulate = Color( 0.984314, 0.811765, 0.027451, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Passcode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Passcode/Area2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Passcode/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Passcode/Area2D" to="." method="_on_Area2D_body_exited"]
